2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_loader.[ch]: GtkObject -> GObject
	* src/gimv_image.c, src/gimv_image_view.c, src/exif_view.c:
	Follow the change.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/thumbnail/konqueror-old.c, plugins/thumbnail/nautilus-2.0.c,
	  plugins/thumbnail/nautilus.c, plugins/thumbnail/konqueror.c,
	  plugins/thumbnail/ee.c: Removed obsolete cache types support.
	* plugins/thumbnail/Makefile.am: Follow the change.
	* src/pixmaps/gimageview.xpm: Changed to develop version.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* m4/libwmf.m4: quot.
	* m4/xine.m4: update.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* acconfig.h: Remove.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* Makefile.am, autogen.sh, configure.ac, po/Makefile.in.in,
	  src/Makefile.am, src/gimageview.c:
	glib-gettextize.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* intl: Removed.
	* m4/lcmessage.m4, m4/glibc21.m4, m4/gettext.m4, m4/codeset.m4,
	  m4/progtest.m4, m4isc-posix.m4, m4/intltool.m4: Removed.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/intl.h: Removed.
	* plugins/io_stream/gimv_gzip_io.c, plugins/io_stream/gimv_bz_io.c,
	  plugins/thumbnail/konqueror-old.c, plugins/thumbnail/nautilus-2.0.c,
	  plugins/thumbnail/nautilus.c, plugins/thumbnail/ee.c,
	  plugins/thumbnail/xvpics.c, plugins/image_loader/tga.c,
	  plugins/image_view/gimv_xine_priv.h,
	  plugins/thumbnail_view/detailview_prefs.c, src/gimv_elist.c,
	  src/gtk_prop.c, src/menu.c, src/gimv_dlist.c, src/gtkutils.c,
	  src/gfileutil.c, src/gimv_prefs_ui_utils.c, src/Makefile.am,
	  src/prefs_ui/prefs_ui_thumbalbum.c, src/gimv_cell_pixmap.c,
	  src/charset.c, src/gimageview.h:
	intl.h -> glib/gi18n.h

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Fix some warnings.
	* autogen.sh: Remove needless code.
	* m4/libcharset.m4, m4/iconv.m4: Remove.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Renamed from configure.in.