@@ -1,5 +1,9 @@
 2007-10-13 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_thumb_win.c: Don't show resize grip of status bar.
+
+2007-10-13 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_image_loader.[ch]: GtkObject -> GObject
 	* src/gimv_image.c, src/gimv_image_view.c, src/exif_view.c:
 	Follow the change.
